# privacyTap

./: .env.example  .gitignore  LICENSE  README.md  privacytap.claude.env.example  pyproject.toml  start-privacytap-claude.cmd
docs/: course-experiment-plan.md  experiment.md  project-brief.md  threat-model.md  user-manual.md
docs/superpowers/plans/: 2026-06-19-standalone-privacytap.md  2026-06-20-claude-code-messages-integration.md  2026-06-20-codex-responses-integration.md  2026-06-20-course-manual-experiment-docs.md  2026-06-20-one-click-claude-launcher.md
docs/superpowers/specs/: 2026-06-19-standalone-privacytap-design.md  2026-06-20-claude-code-messages-integration-design.md  2026-06-20-codex-responses-integration-design.md  2026-06-20-course-manual-experiment-docs-design.md  2026-06-20-one-click-claude-launcher-design.md
examples/: __init__.py  demo_client.py  demo_prompts.json  mock_anthropic_upstream.py  mock_responses_upstream.py  mock_upstream.py
integrations/: __init__.py  langfuse_exporter.py
privacytap/: __init__.py  anthropic.py  archive.py  cli.py  exporters.py  proxy.py  responses.py  sse.py
privacytap/privacy/: __init__.py  detectors.py  models.py  streaming.py  transformer.py  vault.py
scripts/: evaluate_privacy.py  start_claude_with_privacytap.ps1
tests/: test_anthropic_contract.py  test_anthropic_proxy.py  test_claude_launcher_contract.py  test_cli.py  test_codex_contract.py  test_config.py  test_course_docs_contract.py  test_demo_client.py  test_detectors.py  test_evaluate_privacy.py  test_exporters.py  test_integration.py  test_langfuse_exporter.py  test_privacy_cli.py  test_privacy_invariants.py  test_privacy_proxy.py  test_proxy.py  test_responses_proxy.py  test_safe_archive.py  test_sse.py  test_standalone_contract.py  test_streaming_restorer.py  test_transformer.py  test_validators.py  test_vault.py
tests/fixtures/: privacy_cases.json
tokentap/: cli.py  config.py  privacy_proxy.py  proxy.py  safe_archive.py
tokentap/privacy/: __init__.py  detectors.py  langfuse_exporter.py  transformer.py  validators.py  vault.py
