[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tokentap"
version = "0.1.1"
description = "Token tracker for LLM CLI tools with live terminal dashboard"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Juan Munoz"}
]
keywords = ["llm", "tokens", "claude", "anthropic", "openai", "gemini", "cli", "token-tracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "aiohttp>=3.9.0,<4",
    "rich>=13.0.0,<16",
    "tiktoken>=0.5.0,<1",
    "click>=8.0.0,<9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "pytest-asyncio>=0.23,<2",
    "pytest-cov>=5,<8",
    "build",
    "twine",
]
langfuse = ["langfuse>=4,<5"]

[project.urls]
Homepage = "https://tokentap.ai"
Repository = "https://github.com/jmuncor/tokentap"
Issues = "https://github.com/jmuncor/tokentap/issues"

[project.scripts]
tokentap = "tokentap.cli:main"

[tool.setuptools.packages.find]
where = ["."]
