[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "privacytap"
version = "0.1.0"
description = "Full-chain reversible anonymization proxy for OpenAI-compatible LLM calls"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "PrivacyTap contributors"}
]
keywords = ["llm", "privacy", "pii", "proxy", "anonymization", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "aiohttp>=3.9.0,<4",
    "click>=8.0.0,<9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "pytest-asyncio>=0.23,<2",
    "pytest-cov>=5,<8",
    "build",
    "twine",
]
langfuse = ["langfuse>=4,<5"]

[project.urls]
Homepage = "https://github.com/aRookiehuang/privacyTap"
Repository = "https://github.com/aRookiehuang/privacyTap"
Issues = "https://github.com/aRookiehuang/privacyTap/issues"

[project.scripts]
privacytap = "privacytap.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["privacytap*", "integrations*"]
